<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
		xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
		android:id="@+id/parent_view"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@drawable/bg_game"
		android:keepScreenOn="true">

	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="30dp"
				android:layout_marginBottom="30dp">

			<TextView
					android:id="@+id/use_time_text_view"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:minWidth="70dp"
					android:gravity="center"
					android:layout_gravity="center_vertical"
					android:layout_marginStart="20dp"
					android:paddingStart="15dp"
					android:paddingEnd="15dp"
					android:paddingTop="5dp"
					android:paddingBottom="5dp"
					android:textSize="15sp"
					android:textStyle="bold"
					android:text="@string/default_time"
					android:textColor="@color/color_game_time"
					android:background="@drawable/game_text_time"/>

			<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:gravity="end"
					android:layout_marginEnd="20dp">

				<Button
						android:id="@+id/level_button"
						android:layout_width="60dp"
						android:layout_height="30dp"
						android:layout_gravity="center_vertical"
						android:layout_marginStart="8dp"
						android:background="@drawable/game_button_level_select"
						android:textColor="@drawable/game_button_level_text"
						android:text="@string/level_game"/>

				<Button
						android:id="@+id/reset_button"
						android:layout_width="60dp"
						android:layout_height="30dp"
						android:layout_gravity="center_vertical"
						android:layout_marginStart="8dp"
						android:background="@drawable/game_button_reset_select"
						android:textColor="@drawable/game_button_reset_text"
						android:text="@string/reset_game"/>

			</LinearLayout>
		</LinearLayout>

		<top.ratil.puzzlepie.view.CustomView
				android:id="@+id/custom_view"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:background="@drawable/game_bg_color_puzzle"/>

		<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_marginStart="20dp"
				android:layout_marginEnd="20dp"
				android:layout_marginTop="20dp">

			<com.qmuiteam.qmui.widget.QMUIRadiusImageView
					android:id="@+id/puzzle_pic"
					android:layout_width="160dp"
					android:layout_height="160dp"
					app:qmui_corner_radius="10dp"
					app:qmui_border_width="2dp"
					app:qmui_border_color="@color/blue_btn_bg_color"/>

			<Button
					android:id="@+id/select_pic"
					android:layout_width="wrap_content"
					android:layout_height="50dp"
					android:layout_marginTop="20dp"
					android:layout_alignParentEnd="true"
					android:background="@drawable/game_button_select_pic_select"
					android:textColor="@drawable/game_button_select_pic_text"
					android:textStyle="bold"
					android:text="@string/select_pic"/>

			<Button
					android:id="@+id/history_pic"
					android:layout_width="wrap_content"
					android:layout_height="50dp"
					android:layout_marginTop="90dp"
					android:layout_alignParentEnd="true"
					android:background="@drawable/game_button_his_pic_select"
					android:textColor="@drawable/game_button_his_pic_text"
					android:textStyle="bold"
					android:text="@string/history_pic"/>

		</RelativeLayout>

	</LinearLayout>

</RelativeLayout>

